--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Foliotek/AjaxQ/ajaxq.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/marcoschwartz/aREST.js/aREST.js"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='js/script2.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
 
       <title>Ray's Dog</title>
 
