--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       }
     </style>
   </div>
-  Resolution %: <input type="number" min="0" max="100" id="fname">
+  Resolution %: <input type="number" min="0" max="100" id="fname" value="30">
 </head>
 
 <body>
