--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   <title>Ray's Dog</title>
   <style>
     .box img {
-      /* position: absolute; */
-      left: 10%;
+      position: absolute;
+      margin: auto;
       width: 75%;
       height: 80%;
       object-fit: contain;
