--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,43 @@
       height: 80%;
       object-fit: contain;
     }
+    #arrow-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    button {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      border: 2px solid black;
+      font-size: 28px;
+      font-weight: bold;
+      background-color: white;
+      color: black;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    #up-btn:before {
+      content: "\2191";
+    }
+
+    #left-btn:before {
+      content: "\2190";
+    }
+
+    #down-btn:before {
+      content: "\2193";
+    }
+
+    #right-btn:before {
+      content: "\2192";
+    }
   </style>
 </head>
 
@@ -24,6 +61,12 @@
     <img src="{{ url_for('video_feed') }}">
   </div>
   Resolution %: <input type="number" min="0" max="100" id="fname" value="30">
+  <div id="arrow-buttons">
+    <button id="up-btn" ontouchstart="handleUpButtonPressed()" ontouchend="handleUpButtonReleased()">↑</button>
+    <button id="left-btn" ontouchstart="handleLeftButtonPressed()" ontouchend="handleLeftButtonReleased()">←</button>
+    <button id="down-btn" ontouchstart="handleDownButtonPressed()" ontouchend="handleDownButtonReleased()">↓</button>
+    <button id="right-btn" ontouchstart="handleRightButtonPressed()" ontouchend="handleRightButtonReleased()">→</button>
+  </div>
 </body>
 <script type="text/javascript" src="{{ url_for('static', filename='js/script2.js') }}"></script>
 
