--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,18 @@
       margin: 10px;
       cursor: pointer;
     }
+
+    #left-btn {
+      position: absolute;
+      left: 0;
+      top: calc(50% - 25px);
+    }
+
+    #right-btn {
+      position: absolute;
+      right: 0;
+      top: calc(50% - 25px);
+    }
   </style>
 </head>
 
@@ -46,10 +58,12 @@
   </div>
   Resolution %: <input type="number" min="0" max="100" id="fname" value="30">
   <div id="arrow-buttons">
-    <button id="up-btn" ontouchstart="handleUpButtonPressed()" ontouchend="handleUpButtonReleased()">↑</button>
-    <button id="left-btn" ontouchstart="handleLeftButtonPressed()" ontouchend="handleLeftButtonReleased()">←</button>
-    <button id="down-btn" ontouchstart="handleDownButtonPressed()" ontouchend="handleDownButtonReleased()">↓</button>
-    <button id="right-btn" ontouchstart="handleRightButtonPressed()" ontouchend="handleRightButtonReleased()">→</button>
+    <button id="up-btn" ontouchstart="handleUpButtonPressed()" ontouchend="handleUpButtonReleased()"></button>
+    <div>
+      <button id="left-btn" ontouchstart="handleLeftButtonPressed()" ontouchend="handleLeftButtonReleased()"></button>
+      <button id="right-btn" ontouchstart="handleRightButtonPressed()" ontouchend="handleRightButtonReleased()"></button>
+    </div>
+    <button id="down-btn" ontouchstart="handleDownButtonPressed()" ontouchend="handleDownButtonReleased()"></button>
   </div>
 </body>
 <script type="text/javascript" src="{{ url_for('static', filename='js/script2.js') }}"></script>
