--- a/templates/index2.html
+++ b/templates/index2.html
@@ -146,6 +146,6 @@
         </div>
     </div>
 </body>
-<script src="commands.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/commands.js') }}"></script>
 
 </html>
