--- a/templates/index2.html
+++ b/templates/index2.html
@@ -130,7 +130,7 @@
             height: 100%;
             object-fit: contain;
           "
-            src="https://images.immediate.co.uk/production/volatile/sites/23/2023/01/Giant-panda-c2c51b8.jpg?quality=90&webp=true&resize=1500,1001">
+            src="{{ url_for('video_feed') }}">
     </div>
     <div id="div2">
         <div id="arrow-buttons">
