--- a/templates/index2.html
+++ b/templates/index2.html
@@ -134,15 +134,12 @@
     </div>
     <div id="div2">
         <div id="arrow-buttons">
-            <button id="up" ontouchstart="handleUpButtonPressed()" ontouchend="handleUpButtonReleased()">↑</button>
+            <button id="up">↑</button>
             <div id="lr-buttons">
-                <button id="left" ontouchstart="handleLeftButtonPressed()"
-                    ontouchend="handleLeftButtonReleased()">←</button>
-                <button id="right" ontouchstart="handleRightButtonPressed()"
-                    ontouchend="handleRightButtonReleased()">→</button>
+                <button id="left">←</button>
+                <button id="right">→</button>
             </div>
-            <button id="down" ontouchstart="handleDownButtonPressed()"
-                ontouchend="handleDownButtonReleased()">↓</button>
+            <button id="down">↓</button>
         </div>
     </div>
 </body>
