--- a/templates/index2.html
+++ b/templates/index2.html
@@ -130,19 +130,16 @@
             height: 100%;
             object-fit: contain;
           "
-            src="https://images.immediate.co.uk/production/volatile/sites/23/2023/01/Giant-panda-c2c51b8.jpg?quality=90&webp=true&resize=1500,1001">
+            src="{{ url_for('video_feed') }}">
     </div>
     <div id="div2">
         <div id="arrow-buttons">
-            <button id="up" ontouchstart="handleUpButtonPressed()" ontouchend="handleUpButtonReleased()">↑</button>
+            <button id="up">↑</button>
             <div id="lr-buttons">
-                <button id="left" ontouchstart="handleLeftButtonPressed()"
-                    ontouchend="handleLeftButtonReleased()">←</button>
-                <button id="right" ontouchstart="handleRightButtonPressed()"
-                    ontouchend="handleRightButtonReleased()">→</button>
+                <button id="left">←</button>
+                <button id="right">→</button>
             </div>
-            <button id="down" ontouchstart="handleDownButtonPressed()"
-                ontouchend="handleDownButtonReleased()">↓</button>
+            <button id="down">↓</button>
         </div>
     </div>
 </body>
