--- a/templates/index2.html
+++ b/templates/index2.html
@@ -11,15 +11,6 @@
             padding: 0;
         }
 
-        /* Set the background color of the two divs */
-        #div1 {
-            /* background-color: #f0f0f0; */
-        }
-
-        #div2 {
-            /* background-color: #d0d0d0; */
-        }
-
         button {
             /* width: 50%; */
             height: 100px;
@@ -59,7 +50,7 @@
                 justify-content: center;
                 align-items: center;
                 width: 100;
-                height: 100%;
+                height: 300px;
             }
         }
 
@@ -81,7 +72,7 @@
 
             #arrow-buttons {
                 /* display: flex; */
-                position: relative;
+                position: absolute;
                 /* top: 20%; */
                 text-align: center;
                 flex-direction: column;
@@ -100,12 +91,13 @@
         #up,
         #down {
             width: 30%;
-            /* position: relative; */
+            height: 30%
         }
 
         #left,
         #right {
-            width: 150px;
+            width: 50%;
+            height:100%;
             position: relative;
         }
 
@@ -117,6 +109,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            height:30%;
+
         }
     </style>
 </head>
