--- a/templates/index2.html
+++ b/templates/index2.html
@@ -52,6 +52,13 @@
                 width: 100;
                 height: 300px;
             }
+
+
+            #up,
+            #down {
+                width: 30%;
+                height: 30%
+            }
         }
 
         @media screen and (orientation: portrait) {
@@ -84,20 +91,21 @@
 
             button {
                 opacity: 0.2;
+                border-radius: 0;
+            }
+            #up,
+            #down {
+                width: 100%;
+                height: 30%
             }
 
         }
 
-        #up,
-        #down {
-            width: 30%;
-            height: 30%
-        }
 
         #left,
         #right {
             width: 50%;
-            height:100%;
+            height: 100%;
             position: relative;
         }
 
@@ -109,7 +117,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height:30%;
+            height: 30%;
 
         }
     </style>
@@ -123,8 +131,7 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
-          "
-            src="{{ url_for('video_feed') }}">
+          " src="{{ url_for('video_feed') }}">
     </div>
     <div id="div2">
         <div id="arrow-buttons">
