--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,31 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-  <meta charset=utf-8 />
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/Foliotek/AjaxQ/ajaxq.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/marcoschwartz/aREST.js/aREST.js"></script>
-  <title>Ray's Dog</title>
-  <style>
-    .box img {
-      position: absolute;
-      margin: auto;
-      width: 75%;
-      height: 80%;
-      object-fit: contain;
-    }
-
-  </style>
+    <style rel="stylesheet" href="css/style.css"></style>
 </head>
 
 <body>
-  <div class="box">
-    <img src="{{ url_for('video_feed') }}">
-  </div>
-  Resolution %: <input type="number" min="0" max="100" id="fname" value="30">
+    <!-- Create two divs to cover the entire screen -->
+    <div id="div1">
+        <img style="
+            margin: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+          " src="{{ url_for('video_feed') }}">
+    </div>
+    <div id="div2">
+        <div id="arrow-buttons">
+            <button id="up" class="unselectable disable-dbl-tap-zoom">↑</button>
+            <div id="lr-buttons">
+                <button id="left" class="unselectable disable-dbl-tap-zoom">←</button>
+                <button id="right" class="unselectable disable-dbl-tap-zoom">→</button>
+            </div>
+            <button id="down" class="unselectable disable-dbl-tap-zoom">↓</button>
+        </div>
+    </div>
 </body>
-<script type="text/javascript" src="{{ url_for('static', filename='js/script2.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/commands.js') }}"></script>
 
 </html>
