--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <style rel="stylesheet" href="css/style.css"></style>
+    <style rel="stylesheet" href="static/css/style.css"></style>
 </head>
 
 <body>
