--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
             <button id="down" class="unselectable disable-dbl-tap-zoom">↓</button>
         </div>
     </div>
+    <input type="text" id="Display" value="Hello!">
 </body>
 <script type="text/javascript" src="{{ url_for('static', filename='js/commands.js') }}"></script>
 
