--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             </div>
             <button id="down" class="unselectable disable-dbl-tap-zoom">↓</button>
         </div>
-        <input type="text" id="Display" value="Hello!">
+        <input type="text" id="Display" value="Hello!" autofocus>
     </div>
 </body>
 <script type="text/javascript" src="{{ url_for('static', filename='js/commands.js') }}"></script>
