--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,6 +113,12 @@ button {
         height: 30%
     }
 
+    input {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+    }
+
 }
 
 
