--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Robot Login</title>
+    <title>Doggo Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -68,7 +68,7 @@
 
 <body>
     <form id="pin-form" method="POST">
-        <label for="pin">Enter the 4-digit PIN to control the robot:</label>
+        <label for="pin">Enter the 4-digit PIN to control Ray's Dog:</label>
         <input type="number" id="pin" name="pin" maxlength="4">
         <button type="submit">Submit</button>
     </form>
